--- a/my-app/package.json
+++ b/my-app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@popperjs/core": "^2.10.2",
+    "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -17,8 +18,11 @@
     "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
+    "react-step-progress-bar": "^1.0.3",
     "reactjs-dropdown-component": "^1.2.0",
+    "reactjs-simple-table": "^1.5.1",
     "typescript": "^4.4.4",
     "web-vitals": "^1.0.1"
   },
